Bug 52685 - [4.7/4.8 Regression] ICE in copy_binfo
Summary: [4.7/4.8 Regression] ICE in copy_binfo
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.1
Assignee: Jason Merrill
URL:
Keywords:
: 52470 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-23 11:26 UTC by Jakub Jelinek
Modified: 2012-03-31 23:28 UTC (History)
4 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2012-03-29 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jakub Jelinek 2012-03-23 11:26:42 UTC
template <typename T>
struct A
{
  template <typename U>
  struct B : public A <B<U> >
  {
    struct C : public B<U>
    {
    };
  };
};

ICEs starting with http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=184328
Comment 1 Jason Merrill 2012-03-29 15:55:07 UTC
Author: jason
Date: Thu Mar 29 15:55:01 2012
New Revision: 185968

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=185968
Log:
	PR c++/52685
	* tree.c (copy_binfo): Handle BINFO_DEPENDENT_BASE_P.

Added:
    trunk/gcc/testsuite/g++.dg/template/inherit8.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/tree.c
    trunk/gcc/testsuite/ChangeLog
Comment 2 Jason Merrill 2012-03-29 15:55:47 UTC
Author: jason
Date: Thu Mar 29 15:55:42 2012
New Revision: 185969

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=185969
Log:
	PR c++/52685
	* tree.c (copy_binfo): Handle BINFO_DEPENDENT_BASE_P.

Added:
    branches/gcc-4_7-branch/gcc/testsuite/g++.dg/template/inherit8.C
Modified:
    branches/gcc-4_7-branch/gcc/cp/ChangeLog
    branches/gcc-4_7-branch/gcc/cp/tree.c
    branches/gcc-4_7-branch/gcc/testsuite/ChangeLog
Comment 3 Jason Merrill 2012-03-29 15:56:08 UTC
Fixed.
Comment 4 Paolo Carlini 2012-03-31 23:28:47 UTC
*** Bug 52470 has been marked as a duplicate of this bug. ***