	PR c++/52685 	* tree.c (copy_binfo): Handle BINFO_DEPENDENT_BASE_P.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@185968 138bc75d-0d04-0410-961f-82ee72b054a4